# Normal_Calculator

./: .gitignore  CMakeLists.txt
include/NormalCalculator/: NormalCalculator.hpp
include/tools/: DataHandler.hpp  mathtools.hpp
matlab/: visualizeNormal.m
python/: filecheck.py  yoloBbox.py
scripts/: calcNormal.bash  calcNormalPM.bash  calcNormalPW.bash  yoloInference.bash
src/: DataHandler.cpp  NormalCalculator.cpp  main.cpp  mathtools.cpp
